
EXTRA_DIST=\
  ddv.xml \
  ddv0.xml \
  ddv1.xml \
  geldkarte.xml \
  kvk.xml \
  memorycard.xml \
  processorcard.xml \
  starcos.xml \
  starcos-hvb.xml \
  starcos-vr.xml


appdatadir=@libchipcard2c_config_am@/apps
appdata_DATA=\
  ddv.xml \
  ddv0.xml \
  ddv1.xml \
  geldkarte.xml \
  kvk.xml \
  memorycard.xml \
  processorcard.xml \
  starcos.xml \
  starcos-hvb.xml \
  starcos-vr.xml

MAINTAINERCLEANFILES=Makefile.in

