
EXTRA_DIST=\
  card.xml \
  ddv0.xml \
  ddv1.xml \
  geldkarte.xml \
  kvk.xml \
  memorycard.xml \
  processorcard.xml \
  starcos.xml

carddatadir=@libchipcard2s_config_am@/cards
carddata_DATA=\
  card.xml \
  ddv0.xml \
  ddv1.xml \
  geldkarte.xml \
  kvk.xml \
  memorycard.xml \
  processorcard.xml \
  starcos.xml

