
EXTRA_DIST=\
  card.xml \
  driver.xml \
  ddv0.xml \
  ddv1.xml \
  kvk.xml \
  processorcard.xml \
  starcos.xml


carddatadir=@libchipcard2s_config_am@/drivers/ccid_ifd/cards
carddata_DATA=\
  card.xml \
  ddv0.xml \
  ddv1.xml \
  kvk.xml \
  processorcard.xml \
  starcos.xml

driverdatadir=@libchipcard2s_config_am@/drivers/ccid_ifd
driverdata_DATA=driver.xml

MAINTAINERCLEANFILES=Makefile.in

