
EXTRA_DIST=\
  driver.xml \
  card.xml \
  ddv0.xml \
  ddv1.xml \
  geldkarte.xml \
  kvk.xml \
  processorcard.xml \
  starcos.xml


carddatadir=@libchipcard2s_config_am@/drivers/cyberjack_ctapi/cards
carddata_DATA=\
  card.xml \
  ddv0.xml \
  ddv1.xml \
  geldkarte.xml \
  kvk.xml \
  processorcard.xml \
  starcos.xml

driverdatadir=@libchipcard2s_config_am@/drivers/cyberjack_ctapi
driverdata_DATA=driver.xml

MAINTAINERCLEANFILES=Makefile.in

