
EXTRA_DIST=\
  ddv0.xml \
  ddv1.xml \
  driver.xml \
  geldkarte.xml \
  kvk.xml \
  processorcard.xml \
  starcos.xml


carddatadir=@libchipcard2s_config_am@/drivers/kobil_ctapi/cards
carddata_DATA=\
  ddv0.xml \
  ddv1.xml \
  geldkarte.xml \
  kvk.xml \
  processorcard.xml \
  starcos.xml

driverdatadir=@libchipcard2s_config_am@/drivers/kobil_ctapi
driverdata_DATA=driver.xml

MAINTAINERCLEANFILES=Makefile.in

