
EXTRA_DIST=\
  driver.xml \
  ddv0.xml \
  ddv1.xml \
  kvk.xml \
  processorcard.xml


carddatadir=@libchipcard2s_config_am@/drivers/orga_ctapi/cards
carddata_DATA=\
  ddv0.xml \
  ddv1.xml \
  kvk.xml \
  processorcard.xml

driverdatadir=@libchipcard2s_config_am@/drivers/orga_ctapi
driverdata_DATA=driver.xml
