
EXTRA_DIST=\
  driver.xml \
  ddv0.xml \
  ddv1.xml \
  geldkarte.xml \
  kvk.xml \
  processorcard.xml \
  starcos.xml


carddatadir=@libchipcard2s_config_am@/drivers/scm33x_ifd/cards
carddata_DATA=\
  ddv0.xml \
  ddv1.xml \
  geldkarte.xml \
  kvk.xml \
  processorcard.xml \
  starcos.xml

driverdatadir=@libchipcard2s_config_am@/drivers/scm33x_ifd
driverdata_DATA=driver.xml


MAINTAINERCLEANFILES=Makefile.in

